--- a/PackNow/src/main/resources/application.properties
+++ b/PackNow/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# DATASOURCE
+spring.datasource.url=jdbc:h2:mem:d01291ac-d484-4e73-a2d5-a93eaf1e6793
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
