--- a/PackNow/src/main/resources/application.properties
+++ b/PackNow/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.datasource.url=jdbc:h2:mem:d01291ac-d484-4e73-a2d5-a93eaf1e6793
+spring.datasource.url=jdbc:h2:file:./data/exemplo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
