--- a/PackNow/pom.xml
+++ b/PackNow/pom.xml
@@ -5,16 +5,15 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.2.0</version>		
+		<relativePath> C:/Users/caiod/Documents/Caio/SI/5_periodo/Desenvolvimento_Web/ProgramacaoWebApp/PackNowpom.xml</relativePath>
 	</parent>
+	
 	<groupId>br.edu.iff</groupId>
 	<artifactId>PackNow</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ApiRest</name>
 	<description>Projeto para discipla Desenvolvimento Web</description>
-
-	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -51,23 +50,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
-
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.2.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
-               <artifactId>h2</artifactId>
-              <scope>runtime</scope>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
           <dependency>
         	<groupId>org.springframework.boot</groupId>
-        		<artifactId>spring-boot-starter-jdbc</artifactId>
+        	<artifactId>spring-boot-starter-jdbc</artifactId>
    		 </dependency>
 		<dependency>
 		  <groupId>io.springfox</groupId>
@@ -79,11 +76,11 @@
 		  <artifactId>springfox-swagger-ui</artifactId>
 		  <version>2.9.2</version>
 		</dependency>				 
-	</dependencies>
-
-              <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-              <version>2.2.0</version>
-          </dependency>
+		<dependency>
+		  <groupId>org.springdoc</groupId>
+          <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+          <version>2.2.0</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
